--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
+    "grunt": "~0.4.5",
     "pug-beautify": "0.1.1"
   },
   "devDependencies": {
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt-contrib-nodeunit": "^0.3.3"
   },
   "keywords": [
     "gruntplugin",
